# RsMd

./: Cargo.toml  LICENSE  README.md  config.toml  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml  generate_docs.yml  publish.yml  release.yml  tests.yml
markrs/: all.html  fn.generate_static_site.html  fn.main.html  fn.run.html  index.html  sidebar-items.js  static.CONFIG.html  struct.Cli.html
markrs/config/: fn.default_css.html  fn.default_prism_theme.html  fn.default_tab_size.html  fn.init_config.html  fn.sanitize_by_default.html  fn.validate_config.html  index.html  sidebar-items.js  struct.Config.html  struct.HtmlConfig.html  struct.LexerConfig.html
markrs/html_generator/: fn.format_title.html  fn.generate_default_css.html  fn.generate_head.html  fn.generate_html.html  fn.generate_index.html  fn.generate_navbar.html  fn.indent_html.html  index.html  sidebar-items.js
markrs/io/: fn.copy_css_to_output_dir.html  fn.copy_favicon_to_output_dir.html  fn.copy_file_to_output_dir.html  fn.copy_image_to_output_dir.html  fn.does_config_exist.html  fn.get_config_path.html  fn.read_file.html  fn.read_input_dir.html  fn.visit_dir.html  fn.write_default_config.html  fn.write_default_css_file.html  fn.write_html_to_file.html  index.html  sidebar-items.js
markrs/lexer/: fn.is_punctuation.html  fn.tokenize.html  index.html  sidebar-items.js
markrs/parser/: fn.attach_to_previous_block.html  fn.flatten_inline.html  fn.group_dashed_lines.html  fn.group_lines_to_blocks.html  fn.group_ordered_list.html  index.html  (+24 more)
src/: config.rs  html_generator.rs  io.rs  lexer.rs  main.rs  parser.rs  types.rs  utils.rs
(+49 files in other folders)
