[package]
description = "A Markdown parser and Static Site Generator"
edition = "2024"
name = "rsmd"
version = "1.0.0"
license = "MIT OR Apache-2.0"
keywords = ["markdown", "cli", "ssg", "static_site_generator", "notes"]
repository = "https://github.com/zliel/RsMd"
readme = "README.md"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.2"
unicode-segmentation = "1.12.0"
unicode_categories = "0.1.1"

[[bin]]
name = "rsmd"
path = "src/main.rs"
