[package]
description = "A Markdown parser and Static Site Generator"
edition = "2024"
name = "mark-rs"
version = "1.3.1"
license = "MIT OR Apache-2.0"
keywords = ["markdown", "cli", "ssg", "static_site", "notes"]
repository = "https://github.com/zliel/Mark-rs"
readme = "README.md"

[dependencies]
ammonia = "4.1.1"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
toml_edit = { version = "0.23.2", features = ["serde"] }
unicode-segmentation = "1.12.0"
unicode_categories = "0.1.1"

[[bin]]
name = "markrs"
path = "src/main.rs"
